--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 
   <section id="about">
     <h2>À propos</h2>
-    <p>Je suis un passionné de photo & vidéo, spécialisé dans la création de contenus visuels pour particuliers et entreprises. Mon objectif : capturer des moments uniques et donner vie à vos projets.</p>
+    <p>Passionné de photo & vidéo, spécialisé dans la création de contenus visuels dans le monde du sport pour les particuliers ou les professionnel. Mon objectif : capturer des moments uniques et donner vie à vos projets.</p>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>📧 Email : <a href="mailto:tonemail@example.com">tonemail@example.com</a></p>
-    <p>📱 Instagram : <a href="https://instagram.com/" target="_blank">@tonpseudo</a></p>
+    <p>📧 Email : <a href="mailto:tonemail@example.com">daproduction.nantes@gmail.com</a></p>
+    <p>📱 Instagram : <a href="https://instagram.com/" target="_blank">@DA_prod44</a></p>
   </section>
 
   <footer>
